[gd_scene load_steps=5 format=3 uid="uid://ddualuxj4wcyb"]

[ext_resource type="Script" uid="uid://bs6rjcbtak5sm" path="res://scenes/main_screens/character_inventory.gd" id="1_xow2p"]
[ext_resource type="PackedScene" uid="uid://btkqrwpy7ojlt" path="res://scenes/support_screens/character_hud.tscn" id="2_rv2a7"]
[ext_resource type="PackedScene" uid="uid://caj4vm4x2p0am" path="res://scenes/support_screens/cheat_panel.tscn" id="3_isrg4"]
[ext_resource type="PackedScene" uid="uid://cvndrn0efp2w5" path="res://scenes/support_screens/debug_console.tscn" id="4_ayc3o"]

[node name="CharacterInventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xow2p")

[node name="CharacterHUD" parent="." instance=ExtResource("2_rv2a7")]
layout_mode = 1

[node name="CheatPanel" parent="." instance=ExtResource("3_isrg4")]
layout_mode = 1

[node name="DebugConsole" parent="." instance=ExtResource("4_ayc3o")]
layout_mode = 1
offset_top = 0.0
offset_bottom = 0.0

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 177.0
offset_right = 696.0
offset_bottom = 898.0
current_tab = 0

[node name="Hero_Inventory" type="PanelContainer" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Margin" type="MarginContainer" parent="TabContainer/Hero_Inventory"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Hero_Inventory/Margin"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="TabContainer/Hero_Inventory/Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Hero_Equipment" type="PanelContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Margin" type="MarginContainer" parent="TabContainer/Hero_Equipment"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="equipment_vbox" type="VBoxContainer" parent="TabContainer/Hero_Equipment/Margin"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 920.0
offset_right = 570.0
offset_bottom = 1018.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="RequestInventory" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Get Inventory"

[node name="RequestEquipment" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Get Equipment"

[connection signal="pressed" from="PanelContainer/VBoxContainer/RequestInventory" to="." method="_on_request_inventory_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RequestEquipment" to="." method="_on_request_equipment_pressed"]
